data/examples/case-study/refactored-manifests/catalog-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - route:
    - destinations:
        host: catalog
    timeout: 0.4s
