data/examples/case-study/refactored-manifests/customer-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - customer
  http:
  - route:
    - destinations:
        host: customer
    timeout: 0.4s
