data/examples/case-study/refactored-manifests/order-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - order
  http:
  - route:
    - destinations:
        host: order
    timeout: 0.4s
